@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.630 2004-11-22 05:36:49 castaglia Exp $
+$Id: NEWS,v 1.631 2004-12-02 23:15:17 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -78,6 +78,7 @@ CVS
 - Bug 2516 - Getting "421 Login Timeout" immediately upon connect.
 - Bug 2520 - Turning on AuthAliasOnly disables MaxClientsPerHost.
 - Bug 2510 - Use of ExportCertData TLSOption leads to segfault.
+- Bug 2528 - Incorrect username 'and' parsing in AllowUser.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
